--- a/frontweb/public/index.html
+++ b/frontweb/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt_BR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/fav2.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
